--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,14 +15,18 @@ You are encouraged to improve any provided CSS by using modern units and increas
 
 /************* site defaults *************/
 body {
-  width: 950px;
-  margin: 0 auto;
   font-family: "Montserrat", sans-serif;
   line-height: 1.5;
+  margin: 0 auto;
 }
-
+.index, .contact, .booking-page{
+    margin-left: 25vw;
+    margin-right: 25vw;
+}
 /* TO DO: all elements with the .flex class applied are to be made into flex-box containers. */
-
+.flex{
+    display: flex;
+}
 /************* site-wide text styling *************/
 
 /* TO DO:
@@ -38,7 +42,41 @@ body {
         - change the text colour to white, and
         - change the cursor to pointer.
 */
-
+h1{
+    font-size: clamp(4.8px,2.5vw,48px);
+    align-self: center;
+    justify-self: center;
+}
+h2{
+    font-size: clamp(3.6px,1.875vw,36px);
+    margin-bottom: clamp(2.4px,1.75vw,24px);
+}
+.large-text{
+    font-size: clamp(2.4px,1.75vw,24px);
+}
+a{
+    text-decoration: none;
+    color: black;
+    
+}
+a:hover{
+    text-decoration: underline;
+    color: #4278e5;
+}
+.fake-button:hover,.blue-hover:hover{
+    background-color: #4278e5;
+    cursor: pointer;
+    color: white;
+}
+.fake-button{
+    background-color: #E5AF42;
+    text-align: center;
+    align-self: center;
+    line-height: 3;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+}
 /************* header/footer styling *************/
 
 /* TO DO:
@@ -49,6 +87,29 @@ body {
     - there will be 25px of space between the header and main, and 50px of space between main and footer.
     - the footer should have a max height of about 60px, have a font-weight of 200, and the text within will be centered vertically and horizontally to the browser window.
 */
+header,footer{
+    background-color: #E5AF42;   
+}
+header{
+    margin-bottom: 25px;
+    max-height: 150px;
+}
+footer{
+    margin-top: 50px;
+    max-height: 60px;
+    font-weight: 200;
+    text-align: center;
+}
+header img{
+    width: clamp(7.5px,10vh,75px);
+}
+.nav-bar{
+    justify-content: space-between;
+}
+.nav-item{
+    flex-direction: column;
+    justify-content: space-around;
+}
 
 /************* index page *************/
 
@@ -59,7 +120,16 @@ body {
     - each fake-button on this page will have a responsive width of about 250px.  Use flexbox to manage  space between them.
     - the pair of fake-buttons will be centered on the page. HINT: can calculate the required margin to make them appear to be centered.
 */
-
+.index img{
+    width: clamp(30px,25vw,300px);
+    margin: clamp(30px,1.8vw,50px);
+}
+.index .fake-button{
+    width: clamp(25px,20vw,250px);
+}
+.flex:has(.fake-button){
+    justify-content: space-evenly;
+}
 /************* bookings page *************/
 
 /* TO-DO:
@@ -73,7 +143,9 @@ body {
     - all items within the page will be centered within their available space.
 
 */
-
+.clicked{
+    background-color: #E5AF42;
+}
 /************* contact page *************/
 /* TO DO:
     - the main section of the .contact page will use viewport height units effectively, and be centered.
